graphql controllers, spring bean

--- a/shop-app/pom.xml
+++ b/shop-app/pom.xml
@@ -79,7 +79,12 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
-        
+        <dependency>
+            <groupId>com.company</groupId>
+            <artifactId>shopmodel</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
     <build>
